--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,74 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --text: #CED4DA;
+  --text-light: #ADB5BD;
+  --background-dark: #212529;
+  --background-light: #495057;
+  --background-foreground: #6C757D;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+body {
+  background-color: #495057;
 }
-
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  margin: 0 0 0 0;
+  color: var(--text);
+  overflow: hidden;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.navbar {
+  padding: .6rem;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100dvw;
+  height: max-content;
+  background-color: var(--background-dark);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.navbar-logo {
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.navbar-list {
+  display: flex;
+  gap: 1.2rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.navbar-search {
+  display: flex;
+  padding: 0.4rem;
+  height: 20px;
+  border-radius: 10px;
+  margin-right: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--background-light);
+}
+
+.navbar-search-bar {
+  background-color: var(--background-foreground);
+  color: var(--text);
+  height: 100%;
+  border-radius: 5px;
+  border: transparent;
+}
+
+.navbar-search-bar::placeholder {
+  color: var(--text-light);
+}
+
+.navbar-search-submit {
+  height: 20px;
+  background: transparent;
+  border: transparent;
+}
+
+.navbar-search-submit svg {
+  fill: var(--text);
+}
+
+.navbar-search-submit:hover {
+  cursor: pointer;
 }
